k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quirk-backend-svc
  namespace: quirk
  labels:
    app: quirk-backend
spec:
  type: ClusterIP
  selector:
    app: quirk-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
