k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quirk-ingress
  namespace: quirk
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - quirk-app.ddns.net
      secretName: quirk-tls-secret
  rules:
    - host: quirk-app.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quirk-frontend-svc
                port:
                  number: 80
